PDESupervisorJRE: fix warnings and code smells